argocd/apps/ingress/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: streamlit-ui-gateway
  namespace: streamlit-ui
spec:
  gatewayClassName: envoy-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 8001
      allowedRoutes:
        namespaces:
          from: Same
