argocd/apps/ingress/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: streamlit-ui-route
  namespace: chat-app
spec:
  parentRefs:
    - name: streamlit-ui-gateway-class
  rules:
  - matches:
    - path: 
        type: PathPrefix
        value: /
    backendRefs:
      - name: streamlit-ui-svc
        port: 8001
